# TxAggregator

./: Cargo.toml  README.md
MosaicXC/: Cargo.toml
MosaicXC/src/: cmd_matches.rs  lib.rs  supervisor.rs
cli/: Cargo.toml
cli/src/: client.rs  cmd_matches.rs  lib.rs
cli/src/cmd/: cosmos_query_cmd.rs  mod.rs  rootcmd.rs
cli/src/interact/: cli.rs
cosmos_chain/: Cargo.toml
cosmos_chain/src/: account.rs  chain.rs  chain_manager.rs  channel.rs  channel_pool.rs  client.rs  common.rs  config.rs  connection.rs  error.rs  event_pool.rs  group.rs  keyring.rs  lib.rs  light_client.rs  merkle_proof.rs  registered_chains.rs  validate.rs
cosmos_chain/src/config/: chain_a_config.toml  chain_aggre_config_a.toml  chain_aggre_config_b.toml  chain_b_config.toml  chain_config.toml  ibcblog_key_a.toml  ibcblog_key_aggre_a.toml  ibcblog_key_aggre_b.toml  ibcblog_key_b.toml  key_a.json  key_a.toml  key_b.toml  mosaic_1.toml  mosaic_1_key.toml  mosaic_four_vals.toml  mosaic_four_vals_key.toml  mosaic_xc_chain_a copy.toml  mosaic_xc_key_a.toml  mosaic_xc_test.toml  mosaic_xc_test_key.toml  srxc_chain_1.toml  srxc_chain_1_key.toml
cosmos_chain/src/query/: account.rs  types.rs
cosmos_chain/src/query/grpc/: account.rs  channel.rs  connect.rs  connection.rs  consensus.rs  mod.rs  packet.rs  staking.rs
cosmos_chain/src/query/trpc/: abci.rs  block.rs  connect.rs  consensus.rs  mod.rs  packet.rs  tx.rs
cosmos_chain/src/query/websocket/: collect_event.rs  error.rs  event_source.rs  mod.rs  subscribe.rs
cosmos_chain/src/tx/: batch.rs  create.rs  error.rs  estimate.rs  mod.rs  send.rs  types.rs
magnetism/: Cargo.toml
magnetism/src/: cmd_match.rs  lib.rs  supervisor.rs
main/: Cargo.toml
main/src/: main.rs
types/: Cargo.toml
types/src/: error.rs  ibc_events.rs  lib.rs  merkle_root.rs  message.rs  proofs.rs  serializers.rs  signer.rs  timestamp.rs
types/src/ibc_core/: mod.rs
types/src/ibc_core/ics02_client/: create_client.rs  events.rs  header.rs  height.rs  mod.rs  update_client.rs
types/src/ibc_core/ics03_connection/: connection.rs  error.rs  events.rs  message.rs  mod.rs  version.rs
types/src/ibc_core/ics04_channel/: aggregate_packet.rs  channel.rs  error.rs  events.rs  message.rs  mod.rs  packet.rs  timeout.rs  version.rs
types/src/ibc_core/ics23_commitment/: commitment.rs  error.rs  merkle_tree.rs  mod.rs  specs.rs
types/src/ibc_core/ics24_host/: error.rs  identifier.rs  mod.rs  path.rs
types/src/light_clients/: client_type.rs  header_type.rs  mod.rs
types/src/light_clients/aggrelite/: client_state.rs  consensus_state.rs  header.rs
types/src/light_clients/ics07_tendermint/: client_state.rs  consensus_state.rs  header.rs  height.rs  mod.rs  trust_level.rs
types/src/proto/: aggregate_packet.rs  height.rs  merkle_root.rs  mod.rs
utils/: Cargo.toml
utils/src/: crypto.rs  error.rs  lib.rs  operation.rs  pretty.rs  proto_build.rs
utils/src/encode/: base64.rs  bech32.rs  error.rs  mod.rs  protobuf.rs  systems.rs
utils/src/file/: error.rs  mod.rs  toml_file.rs
utils/src/proto/: hello.proto
