[package]
name = "cosmos_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }

ibc-proto = "0.32.0"
tonic = "0.9.2"
http = "0.2.9"
flex-error = "0.4.4"
byte-unit = { version = "4.0.19", default-features = false, features = ["serde"] }
prost = "0.11.9"
serde = { version = "1.0.164", features = ["derive"] }