[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmos_chain = { path = "../cosmos_chain" }
cli = { path = "../cli" }

tokio = { version = "1.28.2", features = ["rt-multi-thread", "time", "sync"] }
http = "0.2.9"
log = "0.4.19"
env_logger = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter", "fmt", "json"] }

# [dev-dependencies]
# tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter", "fmt", "json"] }