[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}

flex-error = "0.4.4"
ibc-proto = "0.42.0"
tendermint-proto = "0.34.1"
ibc = "0.50.0"
ics23 = "0.11.1"
tendermint = "0.34.1"
tendermint-light-client-verifier = "0.34.1"
num-rational = "0.4.1"
serde = { version = "1.0.164", features = ["derive"] }
safe-regex = "0.2.5"
prost = "0.12"
bytes = "1.4.0"
derive_more = "0.99.17"
serde_json = "1.0.100"
base64 = "0.21.2"
time = "0.3" 
subtle-encoding = "0.5" 