[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.5"
flex-error = "0.4.4"
serde = { version = "1.0.164", features = ["derive"] }
bech32 = "0.9.1"
prost = "0.12"
num-bigint = { version = "0.4.3", features = ["serde"]}
num-rational = { version = "0.4.1", features = ["num-bigint", "serde"]}
subtle-encoding = "0.5.1"
base64 = "0.21.2"
tendermint = "0.34.1"
serde_json = "1.0.100"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.1"
tonic-build = "0.8.0"

[build-dependencies]
tonic-build = "0.8.0"